--- a/EstacionaPlus/usuarios/templates/entrada.html
+++ b/EstacionaPlus/usuarios/templates/entrada.html
@@ -21,7 +21,7 @@
       </style>
 </head>
 <body>
-    <!-- Navbar -->
+    <!-- Cabeçalho -->
     <header>
         <nav class="navbar navbar-light bg-light">
           <div class="container-fluid d-flex justify-content-between align-items-center">
