--- a/EstacionaPlus/usuarios/templates/saida.html
+++ b/EstacionaPlus/usuarios/templates/saida.html
@@ -24,7 +24,7 @@
 
 
 <body>
-    <!-- Navbar -->
+    <!-- Cabeçalho -->
     <header>
         <nav class="navbar navbar-light bg-light">
           <div class="container-fluid d-flex justify-content-between align-items-center">
